# polymarket_indicator

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: ARCHITECTURE.md  DEPLOY_RENDER_NEON.md  DEVELOPMENT.md  GIT_AND_RENDER_SETUP.md  POLYMARKET_CONNECTION.md  PROJECT_EVALUATION.md  PROJECT_STATE.md  QUICK_START.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  paper_trading.md  runbook.md
docs/context/: data-sources.md  domain.md  message-spec.md  observability.md  polymarket-15m-assistant-patterns.md  polymarket-spec.md  runbook.md  security.md  signal-spec.md
docs/phases/: README.md
docs/prompts/: phase-01-foundation.md  phase-02-polymarket.md  (+7 more)
scripts/: check_webhook.py  dev.sh  export_feature_outcomes.py  init_db.py  migrate.py  migrate_add_actual_result.sql  migrate_add_asset.sql  migrate_add_order_book_snapshot.sql  run_schema.py  set_webhook.py  setup.sh  setup_webhook.sh  slippage_report.py  test.sh  validate_data_sources.py  validate_env.py
tests/: __init__.py  conftest.py  test_analytics_calibration.py  test_backtest.py  test_config.py  test_daily_signal_endpoint.py  test_eod_endpoint.py  test_fetchers.py  test_health.py  test_live_price_feed.py  test_outcomes_recorder.py  test_outcomes_resolution.py  test_polymarket_depth.py  test_polymarket_selection.py  test_polymarket_selection_15m.py  test_rate_limit.py  test_signal_engine.py  test_signal_engine_15m.py  test_slippage_report.py  test_telegram_formatter.py  test_user_prefs.py  test_webhook.py
(+73 files in other folders)
